# wai

./: Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  wai.pyi
.github/workflows/: CI-py.yml  test-py.yml  test.yml
src/: lib.rs
src/country_geocoder/: Cargo.toml
src/country_geocoder/src/: data.geojson  lib.rs
tests/: test_basic.py  test_benchmark.py
wai-py/: Cargo.toml  Makefile  README.md
wai-py/_example/: example.py
wai-py/src/: lib.rs
