[project]
name = "wai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[tool.rye]
managed = true
dev-dependencies = [
    "maturin>=1.5.1",
    "citiespy>=0.5.5",
    "pytest>=8.1.1",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.3.5",
]
